--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "pokedex",
+  "name": "agenda",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "jsonwebtoken": "^8.5.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
     "react-semantic-ui-datepickers": "^1.12.0",
-    "redux": "^4.0.4",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^1.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
     "simple-react-validator": "^1.2.4"
@@ -21,13 +17,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "test:coverage": "react-scripts test --coverage",
     "lint": "eslint src",
     "prettier": "prettier \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|md|graphql|mdx)\"",
     "format": "npm run prettier -- --write"
   },
-  "author": "Efrain Peralta",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -43,28 +36,8 @@
       "last 1 safari version"
     ]
   },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.stories.{js,jsx,ts,tsx}",
-      "!src/**/index.{js,jsx,ts,tsx}",
-      "!**/serviceWorker.js",
-      "!**/setupTests.js"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 70,
-        "functions": 80,
-        "lines": 80,
-        "statements": 80
-      }
-    }
-  },
   "devDependencies": {
     "@babel/core": "^7.6.2",
-    "@testing-library/jest-dom": "^4.1.0",
-    "@testing-library/react": "^9.2.0",
-    "@types/jest": "^24.0.18",
     "@types/react-router-dom": "^4.3.5",
     "babel-loader": "^8.0.6",
     "eslint-config-prettier": "^6.3.0",
@@ -72,11 +45,6 @@
     "eslint-plugin-react-hooks": "^2.1.1",
     "husky": "^3.0.7",
     "node-sass": "^4.12.0",
-    "prettier": "^1.18.2",
-    "react-test-renderer": "^16.10.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Efraa/pokedex.git"
+    "prettier": "^1.18.2"
   }
 }
